<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="fitXY"
        android:src="@drawable/image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1title" />

            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerRed"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerPink"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxViolet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerViolet"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <TextView
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2title" />

            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_776BC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer776BC" />

                <RadioButton
                    android:id="@+id/radio_320BC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer320BC" />

                <RadioButton
                    android:id="@+id/radio_825BC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer825BC" />

            </RadioGroup>

            <TextView
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3title" />

            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3" />

            <EditText
                android:id="@+id/answerInputUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:inputType="text"
                android:maxLength="10" />

            <TextView
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4title" />

            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_basket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerBasketBall" />

                <RadioButton
                    android:id="@+id/radio_cricket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerCricket" />

                <RadioButton
                    android:id="@+id/radio_hockey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerHockey" />

            </RadioGroup>

            <TextView
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5title" />

            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxHousefull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerHousefull"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxSpecial36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerSpecial36"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxKesari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerKesari"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:text="@string/submit" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>